--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ coverage==5.5
 Django==3.2.3
 django-debug-toolbar==3.2.1
 django-filter==2.4.0
+django-redis==5.0.0
 djangorestframework==3.12.4
 Pillow==8.2.0
-pytz==2021.1
-sqlparse==0.4.1
 psycopg2-binary==2.9.1
+pytz==2021.1
+redis==3.5.3
+sqlparse==0.4.1
