--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ Pillow==8.2.0
 pytz==2021.1
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
+django-redis==5.0.0
 
 # redis==3.5.3
 # psycopg2-binary==2.9.1
-# django-redis==5.0.0
 # coverage==5.5
 # admin==0.0.1
